Updated to support custom maps

--- a/EscapeTheBackrooms.uproject
+++ b/EscapeTheBackrooms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{6C6CBE6A-4698-2C78-D92E-1BB2D7C56835}",
 	"Category": "",
 	"Description": ""
 }
